--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,3 +7,5 @@ $hero-bg: hsl(189, 26%, 90%);
 $hero-bg-2: hsl(27, 39%, 93%);
 $text-primary: #000000;
 $text-secondary: hsl(225, 17%, 19%);
+$listing-bg: hsl(0, 0%, 96%);
+$listing-text: hsl(203, 3%, 70%);
