--- a/src/components/Header/header.style.scss
+++ b/src/components/Header/header.style.scss
@@ -45,7 +45,7 @@
 
   &:hover {
     border-bottom: 2px solid $secondary-color;
-    margin-bottom: 2px;
+    margin-bottom: -2px;
   }
 }
 
@@ -82,6 +82,10 @@
   color: $white;
   width: 100%;
   text-align: center;
+
+  @include md {
+    width: 100px;
+  }
 
   &:hover {
     background-color: $white;
