added About section

--- a/src/components/About/about.style.scss
+++ b/src/components/About/about.style.scss
@@ -29,25 +29,25 @@
 
 .about__container-text {
   width: 90%;
-  margin: 0 auto;
+  margin: 20px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  .about__heading {
+  h6 {
     color: $primary-color;
     font-weight: 900;
     margin-bottom: 10px;
     text-transform: uppercase;
   }
 
-  .about__sub-heading {
+  h4 {
     color: $text-primary;
     font-weight: 900;
     margin-bottom: 10px;
   }
 
-  .about__text {
+  p {
     line-height: 24px;
     margin-bottom: 20px;
     text-align: center;
@@ -59,16 +59,16 @@
     margin-left: 80px;
     text-align: left;
 
-    .about__heading {
+    h6 {
       font-size: 1rem;
     }
 
-    .about__sub-heading {
+    h4 {
       font-size: 1.5rem;
       margin-bottom: 20px;
     }
 
-    .about__text {
+    p {
       text-align: left;
     }
   }
@@ -140,7 +140,7 @@
   height: 30px;
   padding: 2px 5px;
 
-  .input-field {
+  input {
     border: none;
     outline: none;
     background-color: $white;
