--- a/src/components/Button/button.style.scss
+++ b/src/components/Button/button.style.scss
@@ -12,6 +12,8 @@
   color: $white;
   width: 150px;
   border-radius: 5px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 
   .button__icon {
     margin-left: 8px;
