--- a/src/components/OurServices/ourservices.style.scss
+++ b/src/components/OurServices/ourservices.style.scss
@@ -2,10 +2,10 @@
 @import "../../styles/breakpoints";
 
 .services__container {
-  width: 100%;
+  width: 90%;
   display: flex;
   flex-direction: column;
-  margin: 40px auto;
+  margin: 40px auto 20px auto;
 
   @include md {
     width: 80%;
