--- a/src/components/Card/card.style.scss
+++ b/src/components/Card/card.style.scss
@@ -13,7 +13,7 @@
   margin: 10px auto;
   border-radius: 10px;
   width: 90%;
-  height: 150px;
+  height: 160px;
   object-fit: cover;
 }
 
@@ -22,10 +22,10 @@
   flex-direction: column;
   width: 90%;
   margin: 10px auto;
-}
 
-.card-apartment-price {
-  font-weight: 900;
+  h3 {
+    font-weight: 900;
+  }
 }
 
 .card-apartment-address {
@@ -58,12 +58,6 @@
 
 .card-location-icon {
   color: purple;
-}
-
-.card-favorite-icon {
-  color: red;
-  cursor: pointer;
-  align-self: flex-end;
 }
 
 .details-link {
