--- a/src/components/Card/card.style.scss
+++ b/src/components/Card/card.style.scss
@@ -63,8 +63,8 @@
 .details-link {
   background-color: $primary-color;
   color: $white;
-  padding: 2px 3px;
-  width: 90px;
+  padding: 5px;
+  width: 100px;
   border-radius: 5px;
   text-decoration: none;
   display: flex;
