--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,10 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Lato", "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
     sans-serif;
