--- a/src/pages/Details/details.style.scss
+++ b/src/pages/Details/details.style.scss
@@ -9,6 +9,13 @@
     width: 70%;
     margin: 40px auto;
   }
+}
+
+.img-container {
+  width: 100%;
+  height: 400px;
+  margin-top: 80px;
+  margin-bottom: 40px;
 
   .back-btn {
     cursor: pointer;
@@ -27,12 +34,6 @@
       font-size: 16px;
     }
   }
-}
-
-.img-container {
-  width: 100%;
-  height: 400px;
-  margin-top: 80px;
 
   img {
     width: 100%;
