--- a/src/components/Footer/footer.style.scss
+++ b/src/components/Footer/footer.style.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 100px auto;
+    margin: 100px auto 40px auto;
   }
 }
 
