--- a/src/pages/Sell/sell.style.scss
+++ b/src/pages/Sell/sell.style.scss
@@ -4,19 +4,22 @@
 .sell-header {
   text-align: center;
   width: 80%;
-  margin: 10px auto;
+  margin: 80px auto 20px auto;
   color: $text-secondary;
 }
 
 .sell__container {
-  width: 80%;
+  width: 90%;
   margin: 10px auto 20px auto;
-  padding: 10px;
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px,
-    rgb(209, 213, 219) 0px 0px 0px 1px inset;
+  padding: 20px;
+  border: 1px solid #979494;
   border-radius: 5px;
 
   @include md {
+    width: 70%;
+  }
+
+  @include lg {
     width: 50%;
   }
 
@@ -26,9 +29,9 @@
     margin-bottom: 15px;
 
     label {
-      margin-bottom: 5px;
-      font-weight: 700;
-      font-size: 1.1rem;
+      margin-bottom: 3px;
+      font-weight: 600;
+      font-size: 0.8rem;
       color: $text-secondary;
     }
 
@@ -36,20 +39,16 @@
     select {
       height: 30px;
       width: 100%;
-      outline: none;
       border: none;
+      outline: 1px solid #a3a4a5;
       padding: 5px;
-      box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
-        rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
     }
 
     textarea {
       height: 80px;
       width: 100%;
-      outline: none;
-      border: none;
-      box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
-        rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+      border: 1px solid #a3a4a5;
+      padding: 5px;
     }
   }
 
